<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E5E4E2"
    android:orientation="vertical"
    android:paddingStart="48dp"
    android:paddingTop="48dp"
    android:paddingEnd="48dp"
    tools:context=".ui.auth.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/description_auth_profile"
        android:src="@drawable/image_login" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="24dp"
        android:gravity="center"
        android:text="@string/text_login_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/purple_200"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_login_email"
        style="@style/editText_authenticate_default"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/et_login_password"
        style="@style/editText_authenticate_default"
        android:autofillHints=""
        android:hint="@string/hint_password"
        android:inputType="textPassword" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="24dp"
        android:onClick="onLoginClick"
        android:padding="12dp"
        android:text="@string/button_login" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="onSignUpClick"
        android:text="@string/link_sign_up"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textColor="#136AAF" />

</LinearLayout>