<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.profile.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/side_nav_bar"
        android:orientation="vertical"
        android:paddingTop="48dp">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_consumer_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingBottom="48dp"
                app:cardCornerRadius="80dp">

                <ImageView
                    android:id="@+id/iv_consumer_profile"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:contentDescription="@string/description_consumer_profile"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/ic_person_72" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_consumer_profile_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/teal_700"
                android:contentDescription="@string/description_add_image"
                android:src="@drawable/ic_edit"
                android:translationX="-10dp"
                android:visibility="gone"
                app:fabSize="mini"
                app:layout_anchor="@id/cv_consumer_profile"
                app:layout_anchorGravity="end|bottom"
                app:tint="@color/white" />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <TextView
            android:id="@+id/tv_profile_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="24dp"
            android:text="@string/hint_email"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <TextView
                style="@style/textView_profile_label"
                android:text="@string/hint_username" />

            <EditText
                android:id="@+id/et_profile_username"
                style="@style/editText_profile"
                android:autofillHints=""
                android:hint="@string/hint_username"
                android:inputType="text" />

            <TextView
                style="@style/textView_profile_label"
                android:text="@string/hint_dob" />

            <EditText
                android:id="@+id/et_profile_dob"
                style="@style/editText_profile"
                android:autofillHints=""
                android:cursorVisible="false"
                android:drawableEnd="@drawable/ic_date_picker"
                android:focusable="false"
                android:hint="@string/hint_dob"
                android:inputType="none" />

            <TextView
                style="@style/textView_profile_label"
                android:text="@string/text_gender" />

            <RadioGroup
                android:id="@+id/rg_profile_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <RadioButton
                    android:id="@+id/rb_profile_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/teal_700"
                    android:enabled="false"
                    android:text="@string/radio_male" />

                <RadioButton
                    android:id="@+id/rb_profile_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:text="@string/radio_female" />

            </RadioGroup>

        </LinearLayout>

        <com.github.clans.fab.FloatingActionMenu
            android:id="@+id/fam_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="24dp"
            app:menu_colorNormal="@color/teal_700"
            app:menu_colorPressed="@color/teal_200"
            app:menu_icon="@drawable/ic_setting">

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fab_edit_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_edit"
                app:fab_colorNormal="@color/teal_200"
                app:fab_colorPressed="@color/teal_700"
                app:fab_label="@string/text_edit_profile"
                app:fab_size="mini" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fab_change_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_email"
                app:fab_colorNormal="@color/teal_200"
                app:fab_colorPressed="@color/teal_700"
                app:fab_label="@string/text_change_email"
                app:fab_size="mini" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fab_change_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_lock"
                app:fab_colorNormal="@color/teal_200"
                app:fab_colorPressed="@color/teal_700"
                app:fab_label="@string/text_change_password"
                app:fab_size="mini" />

        </com.github.clans.fab.FloatingActionMenu>

        <LinearLayout
            android:id="@+id/layout_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:orientation="horizontal"
            android:visibility="gone">

            <Button
                android:id="@+id/btn_profile_cancel"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:backgroundTint="@color/teal_700"
                android:text="@string/button_cancel" />

            <Button
                android:id="@+id/btn_profile_save"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:backgroundTint="@color/teal_700"
                android:text="@string/button_save" />

        </LinearLayout>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</LinearLayout>