<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="176dp"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="16dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:paddingTop="8dp"
        app:cardCornerRadius="80dp">

        <ImageView
            android:id="@+id/iv_nav_profile_image"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/description_consumer_profile"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ic_person_48" />

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tv_nav_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:text="@string/hint_username"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/tv_nav_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_email" />

</LinearLayout>