<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeDetailActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_detail"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:fitsSystemWindows="true"
                android:theme="@style/Theme.AppCompat"
                app:contentScrim="@color/purple_500"
                app:expandedTitleTextAppearance="@style/CollapsingToolbarLayoutExpandedTextStyle"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:toolbarId="@id/toolbar_detail">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    app:layout_collapseMode="parallax">

                    <androidx.viewpager.widget.ViewPager
                        android:id="@+id/vp_detail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <me.relex.circleindicator.CircleIndicator
                        android:id="@+id/indicator_detail"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_alignParentBottom="true" />

                </RelativeLayout>

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar_detail"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    android:paddingStart="0dp"
                    android:paddingEnd="16dp"
                    app:layout_collapseMode="pin" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_detail_title"
                    style="@style/textView_advertisement_detail"
                    android:background="#7883C1"
                    android:paddingTop="28dp"
                    android:paddingBottom="6dp"
                    android:text="@string/text_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_detail_merchant"
                    style="@style/textView_advertisement_detail"
                    android:background="#9B79D8"
                    android:onClick="OnMerchantClick"
                    android:paddingTop="12dp"
                    android:paddingBottom="6dp"
                    android:text="@string/text_merchant"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    app:drawableEndCompat="@drawable/ic_chevron_right" />

                <TextView
                    style="@style/textView_advertisement_detail"
                    android:layout_marginTop="24dp"
                    android:text="@string/text_categories"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_detail_categories"
                    style="@style/textView_advertisement_detail"
                    android:text="@string/text_categories"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                <TextView
                    style="@style/textView_advertisement_detail"
                    android:layout_marginTop="24dp"
                    android:text="@string/text_location"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_detail_location"
                    style="@style/textView_advertisement_detail"
                    android:text="@string/text_location"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                <TextView
                    style="@style/textView_advertisement_detail"
                    android:layout_marginTop="24dp"
                    android:text="@string/text_distance"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_detail_distance"
                    style="@style/textView_advertisement_detail"
                    android:text="@string/placeholder_distance_far_away"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                <TextView
                    style="@style/textView_advertisement_detail"
                    android:layout_marginTop="24dp"
                    android:text="@string/text_posted_on"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_detail_date"
                    style="@style/textView_advertisement_detail"
                    android:text="@string/text_posted_on"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                <TextView
                    style="@style/textView_advertisement_detail"
                    android:layout_marginTop="24dp"
                    android:text="@string/text_description"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_detail_description"
                    style="@style/textView_advertisement_detail"
                    android:text="@string/text_no_description"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="100dp" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/e_fab_liked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:onClick="OnLikeClick"
            android:text="@string/text_number_of_like"
            android:textAlignment="center"
            app:icon="@drawable/ic_like"
            app:iconGravity="end"
            app:iconPadding="4dp"
            app:iconTint="@color/white"
            app:layout_anchor="@id/app_bar_detail"
            app:layout_anchorGravity="end|bottom" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <ImageView
        android:id="@+id/iv_detail_full_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:contentDescription="@string/description_full_screen_image"
        android:visibility="gone" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>